[gd_scene load_steps=2 format=2]

[ext_resource path="res://components/Hurtbox.gd" type="Script" id=1]

[node name="Hurtbox" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="InvulnerabilityTimer" type="Timer" parent="."]

[node name="TinterTimer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="timeout" from="InvulnerabilityTimer" to="." method="_on_InvulnerabilityTimer_timeout"]
[connection signal="timeout" from="TinterTimer" to="." method="_on_TinterTimer_timeout"]
